# GoogleSheetsConnection

./: Atlan.dia  Backend Challenge.docx  My_First_Form.xlsx  README.md  columnchart.json  fivemadmen-fac757e6f0c5.json  main.py  piechart.json  pyproject.toml  replit_zip_error_log.txt
django_project/: settings.py  urls.py  views.py
templates/: export.html  index.html
