[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
requests = "^2.27.1"
gspread = "^5.3.2"
oauth2client = "^4.1.3"
[tool.poetry.dev-dependencies]
